syntax = "proto3";

option go_package = "./bluesdp-proto";

message BlueHeartBeat {
    string service_name = 1;
    string ip_address = 2;

}

message BlueHeartBeatResponse {
    string reply = 1;

}

message GetRegistredServiceList {
    string service_name = 1;
}

message ServiceDetail {
    string ip_address = 2;
}

message RespondRegistredServiceList {
    repeated ServiceDetail ips = 1;
}

service BlueSDPHeartBeatService {
    rpc SayAlive(BlueHeartBeat) returns (BlueHeartBeatResponse) {}
    rpc GetList(GetRegistredServiceList) returns (RespondRegistredServiceList) {}

}